--- a/styles.css
+++ b/styles.css
@@ -29,4 +29,26 @@ body {
 
 .content-container {
   width: min(60rem, 100%);
+  height: 100%;
+  padding-left: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.content-header .content-container {
+  font-size: 1.5rem;
+  padding-bottom: 3rem;
+  justify-content: flex-end;
+}
+
+.content-footer .content-container {
+  padding-top: 1.5rem;
+}
+
+.content-footer button {
+  padding: 10px 25px;
+  border: none;
+  border-radius: 5px;
 }
