--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,7 @@ body {
   justify-content: flex-end;
 }
 
+.content-body .content-container,
 .content-footer .content-container {
   padding-top: 1.5rem;
 }
