--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,11 @@ body {
   background-image: url(imgs/background.png);
 }
 
+.content-body p {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
 .form {
   width: 100%;
   display: flex;
@@ -116,11 +121,16 @@ body {
   width: max(10rem, 40%);
   display: flex;
   flex-direction: column;
-  gap: 0.2rem;
+  gap: 0.5rem;
+}
+
+.form label {
+  text-transform: uppercase;
 }
 
 .form input {
   padding: 5px;
   appearance: none;
+  border: 1px solid #e5e7e8;
   border-radius: 5px;
 }
