--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
   background-position: center;
   background-size: cover;
   position: relative;
+  box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.5);
 }
 
 .sidebar .sidebar-banner,
@@ -87,6 +88,7 @@ body {
   padding: 12px 36px;
   border: none;
   border-radius: 8px;
+  box-shadow: 0px 2px 4px 1px rgba(0, 0, 0, 0.5);
   transition: background-color 0.4s;
 }
 
