--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,7 @@ body {
 }
 
 .content-footer button:hover {
+  cursor: pointer;
   background-color: #0d47a3;
 }
 
@@ -128,6 +129,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  letter-spacing: 2px;
 }
 
 .form label {
@@ -139,4 +141,11 @@ body {
   appearance: none;
   border: 1px solid #e5e7e8;
   border-radius: 5px;
+  outline: none;
+  letter-spacing: inherit;
+}
+
+.form input:focus {
+  border-color: #43c5f5;
+  box-shadow: -1px 2px 4px 2px rgba(67, 197, 245, 0.5);
 }
