--- a/styles.css
+++ b/styles.css
@@ -148,3 +148,11 @@ body {
   border-color: #43c5f5;
   box-shadow: -1px 2px 4px 2px rgba(67, 197, 245, 0.5);
 }
+
+input:not(:focus):not(:placeholder-shown):valid {
+  border-color: #43c5f5;
+}
+
+input:not(:focus):not(:placeholder-shown):invalid {
+  border-color: red;
+}
