--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ body {
 }
 
 .form .form-control-container {
-  width: max(10rem, 40%);
+  min-width: max(10rem, 40%);
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
@@ -136,6 +136,7 @@ body {
 }
 
 .form label {
+  text-wrap: nowrap;
   text-transform: uppercase;
 }
 
