--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,6 @@ body {
 
 .form-control-container .validation-container {
   display: flex;
-  align-items: center;
   position: relative;
 }
 
@@ -155,10 +154,9 @@ body {
 input ~ span:last-child::before,
 input ~ span:last-child::after {
   font-size: 1.5rem;
-  opacity: 0;
+  opacity: 1;
   margin: 5px;
   position: absolute;
-  top: 0;
   transition: all 0.4s ease-in-out;
 }
 
@@ -188,12 +186,12 @@ input:not(:focus):not(:placeholder-shown):invalid,
 }
 
 input:not(:focus):not(:placeholder-shown):valid ~ span:last-child::before,
-.interacted:not(:placeholder-shown):valid ~ span::before {
+.interacted:not(:placeholder-shown):valid ~ span:last-child::before {
   opacity: 1;
 }
 
 input:not(:focus):not(:placeholder-shown):invalid ~ span:last-child::after,
-.interacted:not(:placeholder-shown):invalid ~ span::after {
+.interacted:not(:placeholder-shown):invalid ~ span:last-child::after {
   opacity: 1;
 }
 
@@ -220,7 +218,7 @@ input:not(:focus):not(:placeholder-shown):invalid ~ span:last-child::after,
   color: lightgreen;
 }
 
-#password,
-#confirm-password {
-  padding-right: 50px;
+input#password,
+input#confirm-password {
+  padding-right: 3rem;
 }
