Update content names and validation opacity

--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ body {
 input ~ span:last-child::before,
 input ~ span:last-child::after {
   font-size: 1.5rem;
-  opacity: 1;
+  opacity: 0;
   margin: 5px;
   position: absolute;
   transition: all 0.4s ease-in-out;
@@ -207,11 +207,11 @@ input:not(:focus):not(:placeholder-shown):invalid ~ span:last-child::after,
 
 .password-validation li::before {
   font-family: "Material Symbols Outlined";
-  content: "\e5c9";
+  content: "cancel";
 }
 
 .password-validation li.valid::before {
-  content: "\e86c";
+  content: "check_circle";
 }
 
 .password-validation li.valid {
