Lowercase labels and add optional tag
Better UX.

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,10 @@ body {
 
 .form label {
   text-wrap: nowrap;
-  text-transform: uppercase;
+}
+
+span {
+  font-size: 0.8rem;
 }
 
 .form input {
